--- a/style/style.css
+++ b/style/style.css
@@ -14,9 +14,7 @@
     margin: 0;
     padding: 0;
 }
-
 body{
-   /* height: 100vh;*/
     width: 100%;
     box-sizing: border-box;
     background-color: var(--cor-primaria);
@@ -48,7 +46,6 @@ body{
     background-image: url(/assets/assets_image/Background\ Códigos.png);
     background-position: center center;
     background-origin: content-box;
-    
 }
 .apresentacao__conteudo{
     width: 50%;
@@ -80,14 +77,12 @@ body{
     align-items: center;
     gap:32px;
 }
-
 .apresentacao__links__navegacao{
     display: flex;
     flex-direction: column;
     text-align: center;
     gap: 32px; 
-    text-align: center; 
-   
+    text-align: center;  
 }
 .apresentacao__links__navegacao__link{
     display: flex;
@@ -97,19 +92,16 @@ body{
     width: 100%;
     justify-content: center;
     text-decoration: none;
-    color: var(--cor-terciaria);
+    color: var(--cor-hover-bord);
     font-family: var(--fonte-secundaria);
     font-size: 1.5rem;
     font-weight: 600;
     padding: 16px;
 }
-
 .apresentacao__links__navegacao__link:hover{
     background-color: var(--cor-terciaria);
-    border: 4px solid var(--cor-hover-bord);
-    color: var(--cor-primaria);
+    border: 4px solid var(--cor-hover-bord);       
 }
-
 .form {
     display: flex;
     flex-direction: column;
@@ -121,9 +113,7 @@ body{
 
 .form label{
     font-size: 1.5rem; 
-    
-}
-
+    }
 .form input, .form textarea{
     border: 2px solid var(--cor-terciaria);
     border-radius: 8px;
@@ -131,14 +121,11 @@ body{
     padding: 20px;
     font-family: var(--fonte-primaria);
     font-size: 1rem;
-
 }
 .form input:focus, .form textarea:focus {
     outline: 3px solid var(--cor-hover-bord);
-    color:#CAFFCC;
-    
+    color: var(--cor-terciaria);    
 }
-
 .form button{
     border-radius: 8px;
     background: var(--cor-terciaria);
@@ -146,41 +133,32 @@ body{
     font-family: var(--fonte-primaria);
     font-size: 1.5rem;
 }
-
 .apresentacao__imagem{
     width: 40%;
 }
-.container{
-    color: var(--cor-primaria);
-    width: 100%;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--cor-terciaria);
-    padding: 1% 0% 1% 15%;
+footer{    
     display: flex;
     flex-direction: row;
-    gap: 20px;
-    
+    background-color: var(--cor-terciaria);
+    color: var(--cor-primaria);
+    align-items: center;
+    justify-content: space-between;
+    padding: 1% 15% 1% 15%;
 }
 .empresas-parceiras{
+    width: 400px;
     display: flex;
-    gap:53px;   
+    align-items: center;
+    flex-direction: row;
+    gap: 100px;  
 }
 #logoAlura{
-    width: 110%;
-    
+    width: 250%;   
 }
 #logoSenac{
-    width: 13%;
-    
+    width: 25%;    
 }
 .dev{
     font-family: var(--fonte-secundaria);
-    font-size: 1.5em;
-    font-style: normal;
-}
-
-/*Tablet*/
-@media screen {
-    
+    font-size: 1.5rem;
 }
